src/objects/Customizable_Rollup_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Customizable Rollup Settings</label>
    <fields>
        <fullName>AccountHardCreditNonSkew_Incremental__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, the Account Hard Credit (Non-Skew) nightly job limits the number of Accounts selected for recalculation by looking for recently updated Opportunities on those Accounts. This helps to improve Customizable Rollup nightly job performance.</inlineHelpText>
        <label>Incremental Account Hard Credit Non-Skew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChunkSize_Account_HardCredit__c</fullName>
        <description>Only used by the new Customizable Rollups engine in LDV Orgs and only when required for LDV orgs</description>
        <inlineHelpText>FOR LDV ORGS ONLY WITH SFDO GUIDANCE. To avoid a Query Timeout in the rollup batch job in orgs with many millions of Accounts, this specifies the maximum number of Accounts processed in each batch.</inlineHelpText>
        <label>LDV: Account Hard Credit Chunk Size</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChunkSize_Contact_HardCredit__c</fullName>
        <description>Only used by the new Customizable Rollups engine in LDV Orgs and only when required for LDV orgs</description>
        <inlineHelpText>FOR LDV ORGS ONLY WITH SFDO GUIDANCE. To avoid a Query Timeout in the rollup batch job in orgs with many millions of Contacts, this specifies the maximum number of Contacts processed in each batch.</inlineHelpText>
        <label>LDV: Contact Hard Credit Chunk Size</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChunkSize_Contact_SoftCredit__c</fullName>
        <description>Only used by the new Customizable Rollups engine in LDV Orgs and only when required for LDV orgs</description>
        <inlineHelpText>FOR LDV ORGS ONLY WITH SFDO GUIDANCE. To avoid a Query Timeout in the rollup batch job in orgs with many millions of Contacts, this specifies the maximum number of Contacts processed in each batch.</inlineHelpText>
        <label>LDV: Contact Soft Credit Chunk Size</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMT_API_Status__c</fullName>
        <description>Result of the last CustomMetadataType deployment</description>
        <inlineHelpText>JSON for the CMT deployment result
{ &quot;jobId&quot;: &quot;repsonse&quot; }</inlineHelpText>
        <label>CMT API Deployment Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContactHardCreditNonSkew_Incremental__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, the Contact Hard Credit (Non-Skew) nightly job limits the number of Contacts selected for recalculation by looking for those Contacts recently updated Opportunities. This helps to improve Customizable Rollup nightly job performance.</inlineHelpText>
        <label>Incremental Contact Hard Credit Non-Skew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customizable_Rollups_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to enable the new NPSP Customizable Rollup Engine</inlineHelpText>
        <label>Enable Customizable Rollups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Related_Records_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to prevent hard credit and soft credit rollups on Accounts and Contacts from only processing Account and Contact records that have existing related Opportunity or Opportunity Contact Role records.</inlineHelpText>
        <label>Disable Related Records Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LimitRecalculatedRecurringDonations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Limit the number of recurring donations that are recalculated during the nightly Recurring Donation batch job based on recency of the donation.</description>
        <inlineHelpText>Limit the number of recurring donations that are recalculated during the nightly Recurring Donation batch job based on recency of the donation.</inlineHelpText>
        <label>Limit Recalculated Recurring Donations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecurringDonationLastNDays__c</fullName>
        <defaultValue>31</defaultValue>
        <description>Limit Opportunities included in the Recurring Donation Rollup to those modified within a number of days.</description>
        <inlineHelpText>Limit Opportunities included in the Recurring Donation Rollup to those modified within a number of days. Time Bound Recurring donation Rollup batch jobs override this setting.</inlineHelpText>
        <label>RD Modified in Last Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollups_Account_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating donor rollups to the Account object.</inlineHelpText>
        <label>Account Hard Credit Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollups_Account_SkewMode_Batch_Size__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating donor rollups to the Account object using Skew Mode.</inlineHelpText>
        <label>Account Skew Mode Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollups_Account_Soft_Credit_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating soft credit donor rollups to the Account object.</inlineHelpText>
        <label>Account Soft Credit Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollups_AcctContactSoftCredit_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating soft credit donor rollups to the Account object.</inlineHelpText>
        <label>Contact Soft Credit to Acct Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollups_Contact_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Used by the old and new Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating hard credit donor rollups to the Contact object.</inlineHelpText>
        <label>Contact Hard Credit Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollups_Contact_SkewMode_Batch_Size__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating donor rollups to the Contact object using Skew Mode.</inlineHelpText>
        <label>Contact Skew Mode Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollups_Contact_Soft_Credit_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Used by the old and new Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating soft credit donor rollups to the Contact object.</inlineHelpText>
        <label>Contact Soft Credit Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollups_GAU_Batch_Size__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating donor rollups to the General Accounting Unit object.</inlineHelpText>
        <label>GAU Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollups_IncrementalLastNDays_FldOverride__c</fullName>
        <description></description>
        <inlineHelpText>For Incremental Rollups Override Use Only. This value overrides the field used to filter related Opportunities to determine which Accounts, Contacts, GAUs or RDs are recalculated during a nightly scheduled job. Defaults to SystemModStamp.</inlineHelpText>
        <label>Incremental: Last N Days Field Override</label>
        <length>43</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollups_IncrementalLastNDays_ValOverride__c</fullName>
        <description></description>
        <inlineHelpText>For Incremental Rollups Override Use Only. This value overrides the calculated number of days used to filter related Opportunities to determine which Accounts, Contacts, GAUs or RDs are recalculated during a nightly scheduled job.</inlineHelpText>
        <label>Incremental: Last N Days Value Override</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollups_Limit_on_Attached_Opps_for_Skew__c</fullName>
        <defaultValue>250</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>The maximum number of related Opportunities on an Account or Contact allowed in non-Skew Mode Rollup Batch Jobs. An Account or Contact with more than this number of related Opportunities will always be rolled up using Skew Mode.</inlineHelpText>
        <label>Skew Mode Threshold</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollups_Skew_Dispatcher_Batch_Size__c</fullName>
        <defaultValue>300</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of Account, Contact, or GAU records per batch to select for Skew Mode processing.</inlineHelpText>
        <label>Skew Mode Dispatcher Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>